src/test/deca/codegen/valid/print/printlnx_float.deca
// Description :
// printlnx sur un literal float
// Resultat :
// 0x

{
printlnx(4.6);
}
