src/test/deca/codegen/invalid/div_by_zero3.deca
// Description:
//  Verif div par zero
//
// Résultat:
//  Erreur

{
float b = 3.0 - 3.0;
float a = 6.0/b;
}
